--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ requests==2.22.0
 psycopg2-binary==2.8.4
 django-simple-cookie-consent==0.1.1
 https://dist.apache.org/repos/dist/dev/incubator/toree/0.5.0-incubating-rc5/apache-toree-pip/apache-toree-0.5.0.tar.gz
+spylon-kernel
+matlab_kernel
