--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,10 @@ Django==2.2.10
 django-debug-toolbar==2.1
 requests==2.22.0
 psycopg2-binary==2.8.4
+asyncssh 
+aiohttp 
+sqlalchemy==2.0 
+psycopg
 django-simple-cookie-consent==0.1.1
 https://dist.apache.org/repos/dist/dev/incubator/toree/0.5.0-incubating-rc5/apache-toree-pip/apache-toree-0.5.0.tar.gz
 spylon-kernel
